HB-4260: Update periodic baseline and fixing broken styles created

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -4,5 +4,9 @@
 .#{$prefix-component}#{$periodic-component-class} {
     margin: 0;
     font-family: $font-helvetica;
+    font-weight: 400;
+    font-size: $base-font-size;
+    color: $preset-body-color;
+    line-height: 1.5;
     text-decoration: none;
 }
