--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -8,6 +8,8 @@
       text-decoration: underline
 
   +e('arrow')
+    line-height: 0
+
     svg
       transform: rotate(-0.25turn)
       transition: all .3s ease-in-out
