--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -11,6 +11,9 @@ $sizes: ( xxxs: $font-size-xxxs, xxs: $font-size-xxs, xs: $font-size-xs, s: $fon
   +m('color-gray')
     color: color(agray)
 
+  +m('color-gray-light')
+    color: color(agray, light)
+
   +m('family-museo')
     font-family: $font-museo
 
